--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+source: ./docs
+title: Pointing in VR
+email: mhb558@alumni.ku.dk
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  A hompage to share some research data, gathered for a thesis project. 
+  Also contains some code that analyzes the data.
+baseurl: "/pointing-in-vr" # the subpath of your site, e.g. /blog
+url: "https://torsalve.github.io/pointing-in-vr/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: TorSalve
+github_username: TorSalve
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
