--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:
 description: >- # this means to ignore newlines until "baseurl:"
   A hompage to share some research data, gathered for a thesis project. 
   Also contains some code that analyzes the data.
-baseurl: "/pointing-in-vr" # the subpath of your site, e.g. /blog
+baseurl: "/modelling-human-pointing" # the subpath of your site, e.g. /blog
 url: "https://torsalve.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: TorSalve
 github_username: TorSalve
